<resources>
    <string name="app_name">UF2 Application</string>
    <string name="layout_1">Go to exercise 1</string>
    <string name="layout_2">Go to exercise 2</string>
    <string name="back">Go back</string>
    <string name="option">Please, choose an option</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_1">Exercise 1</string>
    <string name="welcome_2">Exercise 2</string>

    <string name="toast1">You are currently in the exercise 1</string>
    <string name="toast2">You are currently in the exercise 2</string>

    <string name="playing">Playing…</string>
    <string name="stop">Music stopped</string>

    <string name="tableCreate">Create table</string>
    <string name="tableInsert">Insert data</string>
    <string name="tableSelect">Consult data</string>

    <string name="musicPlay">Play</string>
    <string name="musicStop">Stop</string>
    <string name="musicFreeze">Freeze</string>

    <string name="serviceStart">Start service</string>
    <string name="serviceStop">Stop service</string>
    <string name="serviceStarted">The service has started</string>

    <string name="tableName">Table name</string>
    <string name="tableCol1">Text Col.1</string>
    <string name="tableCol2">Text Col.2</string>
    <string name="tableCol3">Number Col.3</string>

    <string name="insertOK">Data added correctly</string>
    <string name="insertNOK">Error: Data has not been added</string>

    <string name="errEmpty">Values can not be empty, nor equal</string>
    <string name="errNum">Values can not be just numbers</string>


</resources>
